<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.olivercatling.hasamishogi.Activities.ActivitySelectPlayer">

    <LinearLayout
        android:id="@+id/layout_add_players"
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_select_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_player1" />

        <ListView
            android:id="@+id/list_select_player1"
            android:layout_width="match_parent"
            android:layout_height="182dp">

        </ListView>

        <TextView
            android:id="@+id/text_select_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_player2" />

        <ListView
            android:id="@+id/list_select_player2"
            android:layout_width="match_parent"
            android:layout_height="255dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player1" />

            <TextView
                android:id="@+id/text_player1_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player2" />

            <TextView
                android:id="@+id/text_player2_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
